Update ML Project (1).ipynb

--- a/ML Project (1).ipynb
+++ b/ML Project (1).ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "#  ML PROJECT\n",
-    "##       GOLD  PRICE PREDICTION "
+    "##       AurumTrend: Navigating Gold Market Trends
+ "
    ]
   },
   {
