ML Project (1).ipynb

--- a/ML Project (1).ipynb
+++ b/ML Project (1).ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "source": [
     "#  ML PROJECT\n",
-    "##       AurumTrend: Navigating Gold Market Trends
- "
+    "##       AurumTrend: Navigating Gold Market Trends"
    ]
   },
   {
